--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ $ git checkout gh-pages
 <p>but I have not got the hang of branches</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="#" onclick="myfunction();">Designer Templates</a></h3>
 
 <p>Templates offered are great but what are my projects really about? How do my pages represent what is needed to be represented?</p>
 
