add id for js test

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </ul>
       </nav>
 
-      <section>
+      <section id="a1">
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my GitHub Page.</h3>
 
