--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@ $ git checkout gh-pages
 
 <p>I might need to  Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> to get some help and sort it out.</p>
 <p>I might <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-</section>
 
-<section id="then" >
-  <h1>HTML Ipsum Presents</h1>
+  <h1 id="then">HTML Ipsum Presents</h1>
          
 <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
 
@@ -77,16 +75,15 @@ $ git checkout gh-pages
   height: 80px; 
 }
 </code></pre>
-</section>
 
-<section id="later">
+<a id="later">
   <ul>
     <li>Add social links</li>
     <li>Introduction</li>
     <li>who am I</li>
-    <li>who cares?</li>
+    <li>who cares</li>
   </ul>
-</section>
+</a>
 
 <footer>
 <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a> and mucked by yours truly</small></p>
