--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ $ git checkout gh-pages
     <li>who cares</li>
   </ul>
 </a>
+</section>
 
 <footer>
 <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a> and mucked by yours truly</small></p>
