revert back to div

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </nav>
 </header>
 
-<section id="a1">
+<div id="a1">
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my GitHub Page.</h3>
 
@@ -84,7 +84,7 @@ $ git checkout gh-pages
     <li>who cares</li>
   </ul>
 </a>
-</section>
+</div>
 
 <footer>
 <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a> and mucked by yours truly</small></p>
