clean out the garbage

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-<<<<<<< HEAD
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -32,42 +31,6 @@
 
 <div id="a1">
 <h3>
-=======
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>popROAR begins</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-
-    <!-- font awesome? -->
-    <!--link rel="import" href="uno.html"-->
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-
-      <header>
-        <h1>poproar.github.io</h1>
-        <p class="view"><a href="https://github.com/poproar">View My GitHub Profile</a></p>
-
-         <nav>
-        <ul>
-          <a href="#" onclick="myfunction();"><li>Now</li></a>
-          <li>Then</li>
-          <li>Later</li>
-        </ul>
-      </nav>
-      
-      </header>
-
-      <section id="a1">
-        <h3>
->>>>>>> parent of 2a88ce4... reworking
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my GitHub Page.</h3>
 
 <p>Not sure how efficient the use of this will be. I tried:</p>
@@ -98,7 +61,6 @@ $ git checkout gh-pages
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>If I need support</h3>
 
 <p>I might need to  Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> to get some help and sort it out.</p>
-<<<<<<< HEAD
 <p>I might <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
   <h1 id="then">HTML Ipsum Presents</h1>
@@ -154,21 +116,4 @@ document.getElementById("a1").innerHTML = '<a href="index.html" >Aw Snap!</a>';
 </script>
 
 </body>
-=======
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a> may not be well represented here after I muck around</small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    <script>function myfunction() {
-	window.alert("Immabouttadoit!");
-	this.innerHTML= "Then";
-   document.getElementById("a1").innerHTML = '<a href="index.html" >Aw Snap!</a>';
-   // document.getElemen
-	}
-   </script>
-    
-  </body>
->>>>>>> parent of 2a88ce4... reworking
-</html>
+</html>>
