--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <header>
 <div class="column one-fourth vcard" itemscope="" itemtype="http://schema.org/Person">
-        <img alt="" class="avatar rounded-2" style=" border-radius: 50px 15px; " height="230" src="https://avatars1.githubusercontent.com/u/3342465?v=3&amp;s=460" width="230">
+        <img alt="" class="avatar" height="230" src="https://avatars1.githubusercontent.com/u/3342465?v=3&amp;s=460" width="230">
 
       <h1>poproar</h1>
 
