add link to resume

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ $ git checkout gh-pages
 <script>function myfunction() {
 window.alert("Immabouttadoit!");
 this.innerHTML= "Then";
-document.getElementById("a1").innerHTML = '<a href="index.html" >Aw Snap!</a>';
+document.getElementById("a1").innerHTML = '<a href="index.html" >Aw Snap!</a><br/><a href="/resume" >Learn about me</a>';
 // document.getElemen
 }</script>
 
